[package]
name = "MiniBrew"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }   # Para baixar arquivos via HTTP
tokio = { version = "1", features = ["full"] }           # Necessário para reqwest async
serde = { version = "1.0", features = ["derive"] }       # Para lidar com JSON (opcional)
