[package]
name = "MiniBrew"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }   # Para baixar arquivos via HTTP
tokio = { version = "1", features = ["full"] }           # Necessário para reqwest async
serde = { version = "1.0", features = ["derive"] }       # Para lidar com JSON (opcional)
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
which = "5.0"
